# ChangeLog for dev-python/pbr
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pbr/ChangeLog,v 1.23 2015/01/01 21:28:00 maekke Exp $

  01 Jan 2015; Markus Meier <maekke@gentoo.org> pbr-0.8.2.ebuild:
  arm stable, bug #530600

  30 Dec 2014; Jeroen Roovers <jer@gentoo.org> pbr-0.8.2.ebuild:
  Stable for HPPA (bug #530600).

  23 Dec 2014; Mike Gilbert <floppym@gentoo.org> pbr-0.8.2.ebuild:
  Move ~alpha keyword forward.

  20 Aug 2014; Anthony G. Basile <blueness@gentoo.org> pbr-0.5.23-r2.ebuild,
  pbr-0.5.23.ebuild, pbr-0.7.0.ebuild, pbr-0.8.0.ebuild, pbr-0.8.2.ebuild:
  Keyword ~ppc ~ppc64, bug #508282

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org> pbr-0.8.0.ebuild:
  Keyworded on alpha, bug #508282

*pbr-0.8.2 (12 Jun 2014)

  12 Jun 2014; Patrick Lauer <patrick@gentoo.org> +pbr-0.8.2.ebuild:
  Bump, relax test deps, add py34

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org> pbr-0.8.0.ebuild:
  keyword ~ia64 wrt bug #508282

  04 May 2014; Markus Meier <maekke@gentoo.org> pbr-0.8.0.ebuild:
  add ~arm, bug #508282

  25 Apr 2014; Jeroen Roovers <jer@gentoo.org> pbr-0.8.0.ebuild:
  Marked ~hppa (bug #508282).

*pbr-0.8.0 (19 Apr 2014)

  19 Apr 2014; Matthew Thode <prometheanfire@gentoo.org> +pbr-0.8.0.ebuild,
  pbr-0.7.0.ebuild:
  bump to 0.8.0

  30 Mar 2014; Ian Delaney <idella4@gentoo.org> -pbr-0.5.21.ebuild,
  -pbr-0.5.23-r1.ebuild, pbr-0.7.0.ebuild:
  rm old

*pbr-0.7.0 (27 Mar 2014)

  27 Mar 2014; Matthew Thode <prometheanfire@gentoo.org> +pbr-0.7.0.ebuild:
  adding for keystone

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> pbr-0.5.23-r2.ebuild:
  Keyword ~amd64-linux ~x86-linux

*pbr-0.5.23-r2 (17 Feb 2014)

  17 Feb 2014; Matthew Thode <prometheanfire@gentoo.org> +pbr-0.5.23-r2.ebuild:
  fixing some py32 problems and adding py32 support

*pbr-0.5.23-r1 (21 Jan 2014)

  21 Jan 2014; Ian Delaney <idella4@gentoo.org> +pbr-0.5.23-r1.ebuild,
  pbr-0.5.23.ebuild: