@@ -8,14 +8,15 @@ DIST pbr-0.8.2.tar.gz 77790 SHA256 eef2ace8d65d5902582cbc9ad3b2ecff0e86a6f90ad48
 EBUILD pbr-0.5.23-r2.ebuild 2254 SHA256 dcbee0e7db55e631082c14984cde2dead50b139b83b34703f8e83ebd5273a884 SHA512 7a663a7ed816e8ff21d5dfbf9bf018fb50f59dedb22a9821b94c183ccbe359b7cb0d3f8d3d87f9baa8304212c39fe251e18e002ff0feb5b35bb6fb4b65b52fd5 WHIRLPOOL efc5c5e4942ff1bd74c102fb223a06123cfd3eafd9503c11b2aa68e4056f72d7c7a769c4093827632e51f47c823ef33b9936305ae4dfacc821f59f193bb5fb13
 EBUILD pbr-0.5.23.ebuild 1880 SHA256 a70f66b8b7864c691ad3e058b45802b5f7af6b79ff86c932bac3c6b0a58f793e SHA512 97e52d8bb2f55c3692775ee9849f6a77c48ae7d84c007717bf906b85069868ef6571c58adb4eba497b10560baa9cb138dbdd2eda65e58ad091e7b865019830b5 WHIRLPOOL 349ce8b48722a0b598673b1c51058768bb34cb5ebcd7b8399893dcfbce6ca5f4cacd74d09da97a4ccca50ede31b291c86a936acd324e7c364a9574d2de51f822
 EBUILD pbr-0.7.0.ebuild 2256 SHA256 a72c87454e76db760177b5890c2ecfad4ada83430786f78e2380f22f74c58672 SHA512 4d3a9161f5c149a2daa6a39512c2216fbbed33510d7a37f38316c8bd5124210b5d6a03c3bbabc2535d244774d1906c03ed689f52b7c2f1912d7de423efb6c3ed WHIRLPOOL 88033a6e8824e68ecbb96c9c3d82abc36e59430d79e7fd01ddb329769e2e14d6571bf95f2ce124f6f37abf1fccefd7407b045f09c84d85233e22843bfdd1210f
-EBUILD pbr-0.8.0.ebuild 1948 SHA256 38d9d77f713e87d61dcaa1b72c04814ffd34ca5d148d2da41e7fb6e15304bf9b SHA512 524bef5836cdfa3fb1e7540e63dea2a6aa586de7e64fce5ac74eb64b4986f4413c35760e5c01d00878bf9e4a0f5ff6ae5b8ff7f37f9075d7ef6b88c31cc8cdb1 WHIRLPOOL eeaab7ed57fc5cab833bd486f8b72c1f31a33771565ffa7f8c6897d89ccf87b95d4f1ebc4c7a3c94bcd988a4fd268fc69aa4246d68e29b9200168f6ae6020623
+EBUILD pbr-0.8.0.ebuild 1685 SHA256 ee2703b08fb61cd840c6c4885ad4a0a9052400570dd5433c25c46db409822789 SHA512 d040b6495ddd478fe83ceae307acf9dedf040047f7844e8d393f1a122b27e5e688a36c80e356e04cd2ea439dc1f230054a8e7956bd21e42bff0e86018c925f07 WHIRLPOOL 54a341540d211b3d4947d6585df1961cd0b5e69c17a74b8d94b70405f021155c6fa5a08615d8ea2f6b10e8da4e9f834f1300490aa78560c67f2aedc8a4a551f8
+EBUILD pbr-0.8.2-r1.ebuild 2195 SHA256 77a2de95a626eb76df25f0e5e3a95d2554a2bc47df18a6eb19019145f87b330d SHA512 9905f6e2f74253896ff9b679635e265780fb8c60c56aa68deb21a59524d181c74d23cfee13e5586bcfd6f3088e079c29bd98094183552eb38325e2a407b0024c WHIRLPOOL 6a69814673e43adba2ffd7bff4e9d16132229370fe514ae34d2fb4c0edeca94f8755385dff1ca99a662242533e68c0bc82ecd8a3ad0b0086b1cef0f89906091f
 EBUILD pbr-0.8.2.ebuild 1944 SHA256 5eb7ad9cbba4ccf9b3753a207f32bec12a4fe20a4e8d3653b4edc2392dfbb74d SHA512 9ccd9e748902d3d1d13b72615d1830eaf9b370c73093632a4fc54352a87b183863d7e288c0b8d5f1ad96a4c53085e24f222bf8748870c5e708e8c576294d7739 WHIRLPOOL 8432c9820b6456f81a8ba3abaa496189b371d01772b3cd3de22f6f63429174f8d9bf69696c2f2f1f328a8775e4aecb27dd60f90eeeb915291d82d2714b503938
-MISC ChangeLog 3053 SHA256 898d053aa9f04b8b6d482792f2693cc97ef08d533bfef5f17029990eadbe6890 SHA512 b49e643689e1a37e82b2844cdec67d86368b8b3c6316adda499cc5c836e194459192182f639760f0c000f9b673b9b50ead36d108428ccceacc508f68fac8ced7 WHIRLPOOL 2fd02c3a77962e49e9e04b2ba8b12cb014f86b580aa9d08249d71e6ac73c9c716fb600122b2d9006e2d085a5572ac854d50a5b1c54e37b1d7d1fd94397dc0c60
+MISC ChangeLog 3331 SHA256 bbbebcdc7ecc1cedc8d81a9bae9a9ba893697dc4da18393347094f2ad4c00498 SHA512 26f2730b4462b74dec7a85a456521b87a526823fa37a0740e84c94608d43fc3327d558b18b099f64ebdd99e78bf5601089b6ec236d888ac52f23b31cc837dc97 WHIRLPOOL 5e0d9c159128c491b862992122f23433bae18a9a9dc378e1dac19c3ff7e86d5369a736fbaebfefccc5b5a777f5eaa449453a85216cf925b229c9f5849afe52a0
 MISC metadata.xml 455 SHA256 9c48b9696884d16afd8f5c2e6af02a1cf3d5c295d33979fe9a7733ecfab2a83e SHA512 e81a53ebb90c189faed750506e27932c0e9bd87a90356a47fa0a7fbe69c142ef34010fc4a7175c2804d942754519a3f8a72f27845791aed82a82d517b50f3567 WHIRLPOOL 0f50c128817c9f3bc0fe5762758c1e23528f7b94d8ad25f0397ec083f368886a8c202133bcd94d79bb66869c62fa2d327778c275dffcd4a4a79e70bc797b6cef
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSlu+EACgkQkKaRLQcq0GJEpACglBCd9c4qT9/iOfMCbJjYsRiw
-gtwAn1Aij5c7pp/jV+B/UkBvL2i8m3y2
-=hcgN
+iEYEAREIAAYFAlTEedIACgkQso7CE7gHKw1jmgCgiOz/oS+Av8EUnCDciSRAvGiP
+gdMAn0wjeY9O4ib+QGSSwBGLhaQxcAEW
+=rJmp
 -----END PGP SIGNATURE-----
