@@ -1,9 +1,9 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pbr/pbr-0.8.0.ebuild,v 1.7 2015/01/25 05:06:09 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pbr/pbr-0.8.2-r1.ebuild,v 1.1 2015/01/25 05:06:09 idella4 Exp $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_7,3_3} )
+PYTHON_COMPAT=( python{2_7,3_3,3_4} )
 
 inherit distutils-r1
 
@@ -20,11 +20,11 @@ IUSE="test"
 DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]
 	test? ( >=dev-python/coverage-3.6[${PYTHON_USEDEP}]
 		>=dev-python/fixtures-0.3.14[${PYTHON_USEDEP}]
-		~dev-python/flake8-2.0[${PYTHON_USEDEP}]
+		>=dev-python/flake8-2.0[${PYTHON_USEDEP}]
 		>=dev-python/mock-1.0[${PYTHON_USEDEP}]
 		>=dev-python/subunit-0.0.18[${PYTHON_USEDEP}]
 		>=dev-python/sphinx-1.1.2[${PYTHON_USEDEP}]
-		<dev-python/sphinx-1.2[${PYTHON_USEDEP}]
+		dev-python/sphinx[${PYTHON_USEDEP}]
 		>=dev-python/testrepository-0.0.18[${PYTHON_USEDEP}]
 		>=dev-python/testresources-0.2.4[${PYTHON_USEDEP}]
 		>=dev-python/testscenarios-0.4[${PYTHON_USEDEP}]
@@ -38,11 +38,24 @@ DISTUTILS_IN_SOURCE_BUILD=1
 python_prepare_all() {
 	# This test passes when run within the source and doesn't represent a failure, but rather
 	# a gentoo sandbox constraint
-	sed -e s':test_console_script_develop:_&:' -i pbr/tests/test_core.py || die
+	# Rm tests that rely upon the package being already installed and fail
+	sed -e s':test_console_script_develop:_&:' \
+		-e s':test_console_script_install:_&:' \
+		-e s':test_sdist_extra_files:_&:' \
+		-e s':test_command_hooks:_&:' \
+		-e s':test_sdist_git_extra_files:_&:' \
+		-i pbr/tests/test_core.py || die
+	sed -e s':test_command_hooks:_&:' \
+		-e s':test_global_setup_hooks:_&:' \
+		-i pbr/tests/test_hooks.py || die
+	einfo "rogue tests disabled"
+
 	distutils-r1_python_prepare_all
 }
 
 python_test() {
+	# Note; removed tests pass once package is emerged, 
+	# it's the suite's design that breaks form, not the tests' intended purpose
 	testr init
 	testr run || die "Testsuite failed under ${EPYTHON}"
 }
