@@ -1,0 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST power_assert-0.2.2.gem 12800 SHA256 ea8146b060a4da226f5d4519cb122a6572741f5354b7cc40f74147bcbe033558 SHA512 f1bd1677734375eb03b4b9166ff84e29bd96b25e66751c4a2a305e1d9c4a63de76b7bf152a2af54871b6901230b2d2926a935aece3165a736eee1b7813e92400 WHIRLPOOL bf58578391c9b926cb38eb80d17497311f1bdb818af5f1ebb83e2ae390d594e644a38c2be14b2c49c01213dc530d239f42e40fda6b4484f4a376ef3e54ff3440
+EBUILD power_assert-0.2.2.ebuild 616 SHA256 a5085ccc95e755cef8a7d2e6939c57fd8aa12288087c83b04fbaec0e983534b8 SHA512 8108fda02c01971832f1f379c6dd3993f264c1d0c3f70aeca8e08575ecdcd264dc38487adcf920ea626e02fdf299a2325fbfb104424a2bb6d390bd0cce59359e WHIRLPOOL 9bfe955422f669f626f06040d66797f0d539df205c74fa9460ccfce506a4f172d0f2d9d0293a16fde1df4e468c089036d7e49c5945405adea2cf5b63fdef5b0f
+MISC ChangeLog 403 SHA256 73ab3ecdf8172c95870811c70acdda8b83999f8b91137775794bf65904188c8e SHA512 43213ed182f70f8d3903487024f2c5b3773206fba4d43956025de13ccd8b51db7f4aa984810cfe330ae56efbc5ef01d749f477f871d272f9a3dbca59f8d83acb WHIRLPOOL 87ec092c18ae28ca698427bc7b7838398cbcda009aed4a804f816e3e0c0d6d94b045bae7830a414a13f31740886d606e33d542bd3571294264f1d7c554eacf6b
+MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlTEmyQACgkQiIP6VqMIqNdoUAD+Mnyar5OJXRd35xYDIs05aI7D
+5phsJouxRfgeJe6GMgsA/jEZGNMkUTfQd6PVqCo83YLtKcejNyh4doS1T1p6YQaM
+=JxWI
+-----END PGP SIGNATURE-----
